--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-<title>HTML Tutorial</title>
+<title>Stephens Page</title>
 <body>
 
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
+<h1>Stephens Web Page</h1>
+<p>This is a paragraph for stuff.</p>
 
 </body>
 </html>
