--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Stephen's Page</title>
 <body>
 
-<h1>Stephens Web Page</h1>
+<h1>Stephens Web Page.</h1>
 <p>This is a paragraph for stuff.</p>
 
 </body>
