--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <title>Stephen's Sample Page</title>
 <body>
 
-<h1>Stephens Web Page.</h1>
+<h1>Stephen's Sample Page.</h1>
 <p>This is a paragraph for stuff.</p>
 
 </body>
 </html>
+
