--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <body>
 
 <h1>Stephen's Sample Page.</h1>
-<p>This is a paragraph for stuff.</p>
+<p>This is a paragraph for stuff hey.</p>
 
 </body>
 </html>
 
-<img src="img_girl.jpg" alt="Girl in a jacket" width="500" height="600">
+<img src="images/img_girl.jpg" alt="Girl in a jacket" width="500" height="600">
 
 </body>
 </html>
