--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 <h1>Stephen's Sample Page.</h1>
 <p>This is a paragraph for stuff hey.</p>
 
-</body>
-</html>
+<p> Hello World</p>
 
 <img src="images/img_girl.jpg" alt="Girl in a jacket" width="500" height="600">
 
