--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
 <img src="images/img_girl.jpg" alt="Girl in a jacket" width="250" height="300">
 
-<img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fwww.fws.gov%2Ffisheries%2Ffreshwater-fish-of-america%2Fimages%2Foriginals%2Feast_cold%2FAmerican_shad_DuaneRavenArt.fw.png&imgrefurl=https%3A%2F%2Fwww.fws.gov%2Ffisheries%2Ffreshwater-fish-of-america%2Famerican_shad.html&tbnid=aBS3I1Iu_M5w1M&vet=12ahUKEwiWtqKh1IXsAhU_GTQIHYQwBdoQMygkegUIARCfAg..i&docid=-C6njSPV1r6ryM&w=1256&h=547&q=fish&ved=2ahUKEwiWtqKh1IXsAhU_GTQIHYQwBdoQMygkegUIARCfAg">
-<img src="https://www.fws.gov/fisheries/freshwater-fish-of-america/images/originals/east_cold/American_shad_DuaneRavenArt.fw.png">
+
+<img src="https://www.fws.gov/fisheries/freshwater-fish-of-america/images/originals/east_cold/American_shad_DuaneRavenArt.fw.png"
+    height="100" width="200"
 
 </body>
 </html>
