--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 <img src="https://www.fws.gov/fisheries/freshwater-fish-of-america/images/originals/east_cold/American_shad_DuaneRavenArt.fw.png"
-    height="100" width="200"
+    height="100" width="200">
 
 </body>
 </html>
