--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <title>Stephen's Sample Page</title>
 <body>
 
-<h1>Stephen's Sample Page.</h1>
+<h1 style="color:rgb(0, 255, 0);">Stephen's Sample Page.</h1>
 <p>This is a paragraph for stuff hey.</p>
 
 <p> Hello World</p>
 
 <img src="images/img_girl.jpg" alt="Girl in a jacket" width="250" height="300">
 
-<div style="border-style: solid;">
+<div style="border-style: solid; border-color: blue;">
 
     <h3>cool fish</h3>
     <img src="https://www.fws.gov/fisheries/freshwater-fish-of-america/images/originals/east_cold/American_shad_DuaneRavenArt.fw.png"
