--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <title>Stephen's Sample Page</title>
-<body>
+
+
+<body style="Background-color: Blanchdalmond;">
 
 <h1 style="color:rgb(0, 255, 0);">Stephen's Sample Page.</h1>
 <p style="color:purple; font-size: 36pt;">This is a paragraph for stuff</p>
