--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Stephen's Sample Page</title>
 
 
-<body style="Background-color: Blanchdalmond;">
+<body style="background-color: blanchedalmond;">
 
 <h1 style="color:rgb(0, 255, 0);">Stephen's Sample Page.</h1>
 <p style="color:purple; font-size: 36pt;">This is a paragraph for stuff</p>
