--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html>
-<title>Stephen's Sample Page</title>
+    <head>
+        <title>Stephen's Sample Page</title>
+
+        <style>
+        .center {
+          margin: auto;
+          width: 60%;
+          border: 3px solid #73AD21;
+          padding: 10px;
+        }
+        </style>
+        </head>
+
 
 
 <body style="background-color: blanchedalmond;">
@@ -12,9 +24,9 @@
 
 <img src="images/img_girl.jpg" alt="Girl in a jacket" width="250" height="300">
 
-<div style="border-style: solid; border-color: blue;">
+<div class="center" style="border-style: solid; border-color: blue;">
 
-    <h3 style="margin: 10pt;">cool fish</h3>
+    <h3 class="center" style="margin: 10pt;">cool fish</h3>
     <img src="https://www.fws.gov/fisheries/freshwater-fish-of-america/images/originals/east_cold/American_shad_DuaneRavenArt.fw.png"
     height="100" width="200">    
 </div>
