--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <style>
         .center {
           margin: auto;
-          width: 100px;
+          width: 60%;
           border: 3px solid #73AD21;
           padding: 10px;
         }
@@ -26,7 +26,7 @@
 
 <div class="center" style="border-style: solid; border-color: blue;">
 
-    <h3 class="center" >cool fish</h3>
+    <h3 class="center" style="width: 200px">cool fish</h3>
     <img src="https://www.fws.gov/fisheries/freshwater-fish-of-america/images/originals/east_cold/American_shad_DuaneRavenArt.fw.png"
     height="100" width="200">    
 </div>
