--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <div class="center" style="border-style: solid; border-color: blue;">
 
     <h3 class="center" style="width: 80px">cool fish</h3>
-    <img src="https://www.fws.gov/fisheries/freshwater-fish-of-america/images/originals/east_cold/American_shad_DuaneRavenArt.fw.png"
+    <img class="center" src="https://www.fws.gov/fisheries/freshwater-fish-of-america/images/originals/east_cold/American_shad_DuaneRavenArt.fw.png"
     height="100" width="200">    
 </div>
 
