--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
         <title>Stephen's Sample Page</title>
 
         <style>
+            p{
+               background-color: rgb(220, 133, 20);
+            }
+        </style>
+
+        <style>
         .center {
           margin: auto;
           width: 60%;
@@ -16,6 +22,8 @@
 
 
 <body style="background-color: blanchedalmond;">
+
+    <p>Nother One of Dem Good ol Paragraphs</p>
 
 <h1 style="color:rgb(0, 255, 0);">Stephen's Sample Page.</h1>
 <p style="color:purple; font-size: 36pt;">This is a paragraph for stuff</p>
