--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Stephen's Sample Page</title>
+        <title> Stephen's Sample Page</title>
 
         <style>
             p{
                background-color: rgb(220, 133, 20);
+            }
+        </style>
+
+        <style>
+            h1{
+            border-style: dashed;
+
             }
         </style>
 
