--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <title> Stephen's Sample Page</title>
 
+        <a href="http://www.cocc.edu"> Central oregon community college<</a>
+
         <style>
             p{
                background-color: rgb(220, 133, 20);
@@ -46,7 +48,7 @@
     height="100" width="200">    
 </div>
 
-
+<h1>end of page</h1>
 
 <body>   
 </html>
