--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
     <head>
         <title> Stephen's Sample Page</title>
 
-        <a href="http://www.cocc.edu"> Central oregon community college<</a>
-
         <style>
             p{
                background-color: rgb(220, 133, 20);
@@ -28,7 +26,7 @@
         </style>
         </head>
 
-
+        <a href="http://www.cocc.edu"> Central Oregon Community College </a>
 
 <body style="background-color: blanchedalmond;">
 
