--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </style>
         </head>
 
-        <a href="http://www.cocc.edu"> Central Oregon Community College </a>
+        <a href="http://www.cocc.edu" target="_blank"> Central Oregon Community College </a>
 
 <body style="background-color: blanchedalmond;">
 
