--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Peter</title>
+    <title>Stephen</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -56,10 +56,11 @@
 
     <main role="main">
 
-      <!-- Main jumbotron for a primary marketing message or call to action -->
+      <!-- Main header for page-->
       <div class="jumbotron" >
-        <div class="container" style="height: 130px;">
-          <h1 class="display-3" >Peter's Portfolio</h1>
+        <div class="container" style="height: 130px; background-color: blue;">
+          <h1 class="display-3" >Stephen's <span style="color: red;" >Portfolio </span>
+        </h1>
           <p style="font-size: 18px;">This Portfolio is for my CS160/161/1162/260 class work at COCC</p>
           <p><a class="btn btn-primary btn-lg" href="http://www.cocc.edu" role="button">My Own Stuff &raquo;</a></p>
         </div>
@@ -99,12 +100,12 @@
             <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
           </div>
         </div>
-      </div> <!-- /container -->
+      </div> <!-- end of second row -->
 
       <hr>
 
       <div class="container">
-        <!-- Another row of columns -->
+        <!-- third row columbs -->
         <div class="row">
 
           <div class="col-md-2">
@@ -137,7 +138,7 @@
             <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
           </div>
         </div>
-      </div> <!-- /container -->
+      </div> <!--end of third row-->
 
       <hr>
         
