--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <!-- third row columbs -->
         <div class="row">
 
-          <div class="col-md-2">
+          <div class="col-md-2" style="border-style: dotted;">
             <h2>Degree Pathways</h2>
             <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
           </div>
