--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
 
       <div class="container">
-        <!-- Example row of columns -->
+        <!-- first row colums -->
         <div class="row">
 
           <div class="col-md-2">
@@ -100,7 +100,7 @@
             <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
           </div>
         </div>
-      </div> <!-- end of second row -->
+      </div> <!-- end of first row -->
 
       <hr>
 
@@ -138,12 +138,12 @@
             <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
           </div>
         </div>
-      </div> <!--end of third row-->
+      </div> <!--end of second row-->
 
       <hr>
         
-      <div class="container">
-        <!-- An another row of columns -->
+      <div class="container" style="background-color: orange;">
+        <!-- third row colums -->
         <div class="row">
 
           <div class="col-md-2">
@@ -176,7 +176,7 @@
             <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
           </div>
         </div>
-      </div> <!-- /container -->
+      </div> <!-- end of third row -->
 
       <hr>
 
