--- a/mystuff/index.html
+++ b/mystuff/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Stephen's Personal</h1>
+    <a href="http://w3schools.com"></a>
+    <img src=https://www.shutterstock.com/image-vector/whatever-slogan-rainbow-iridescent-motivational-perfect-1316452334"" alt="whatever">
     
 </body>
 </html>
