--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </div>
           
           <div class="col-md-2">
-            <h2>Other Programs</h2>
+            <h2>School Pathways</h2>
             <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
           </div>
           
