--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <h1 class="display-3" >Stephen's <span style="color: red;" >Portfolio </span>
         </h1>
           <p style="font-size: 18px;">This Portfolio is for my CS160/161/1162/260 class work at COCC</p>
-          <p><a class="btn btn-primary btn-lg" href="http://www.cocc.edu" role="button">My Own Stuff &raquo;</a></p>
+          <p><a class="btn btn-primary btn-lg" href="mystuff/index.html" role="button">My Own Stuff &raquo;</a></p>
         </div>
       </div>
 
