--- a/mystuff/index.html
+++ b/mystuff/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Stephen's Personal</h1>
     <a href="http://w3schools.com"></a>
-    <img src=https://www.shutterstock.com/image-vector/whatever-slogan-rainbow-iridescent-motivational-perfect-1316452334"" alt="whatever">
+    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fie.linkedin.com%2Fcompany%2Fstuff-nz&psig=AOvVaw2F4oEeEl9GqNiJ3NiDc9BU&ust=1601686062445000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCODFuNrXlOwCFQAAAAAdAAAAABAD" alt="whatever">
     
 </body>
 </html>
