--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <!-- Main header for page-->
       <div class="jumbotron" >
         <div class="container" style="height: 130px; background-color: lightgreen;">
-          <h1 class="display-3" >Stephen's <span style="color: darkred;" >portfolio </span>
+          <h1 class="display-3" >Stephen's <span style="color: darkred;" >Portfolio </span>
         </h1>
           <p style="font-size: 18px;">This Portfolio is for my CS160/161/1162/260 class work at COCC</p>
           <p><a class="btn btn-primary btn-lg" href="mystuff/index.html" role="button">My Own Stuff &raquo;</a></p>
@@ -76,7 +76,7 @@
           </div>
           
           <div class="col-md-2">
-            <h2>School Pathways</h2>
+            <h2>Other Programs</h2>
             <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
           </div>
           
