--- a/mystuff/index.html
+++ b/mystuff/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>Stephen's Personal</h1>
-    <a href="http://w3schools.com"></a>
-    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fie.linkedin.com%2Fcompany%2Fstuff-nz&psig=AOvVaw2F4oEeEl9GqNiJ3NiDc9BU&ust=1601686062445000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCODFuNrXlOwCFQAAAAAdAAAAABAD" alt="whatever">
+    <a href="http://w3schools.com">W3schools</a>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRvCllii7yBuZSeoVpbbwuJOP_FOshffn8HxA&usqp=CAU" alt="stuff">
     
 </body>
 </html>
