--- a/scratch/index.html
+++ b/scratch/index.html
@@ -9,9 +9,9 @@
 <body>
     <h1>Scratch Programs</h1>
 
-    <h2>Friction Ball</h2>
-    <a href="<iframe src="https://scratch.mit.edu/projects/429601581/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>">Game</a>
-
+    <h2> <a href="https://scratch.mit.edu/projects/429601581">Friction Ball</a></h2>
+    <iframe src="https://scratch.mit.edu/projects/429601581/embed" allowtransparency="true" width="485"
+     height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
     <h2>My Game</h2>
 
     <h2>Traverse</h2>
