--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="container" style="height: 130px; background-color: lightgreen;">
           <h1 class="display-3" >Stephen's <span style="color: darkred;" >Portfolio </span>
         </h1>
-          <p style="font-size: 18px;">This Portfolio is for my CS160/161/1162/260 class work at COCC</p>
+          <p style="font-size: 18px;">This portfolio is for my CS160/161/1162/260 class work at COCC</p>
           <p><a class="btn btn-primary btn-lg" href="mystuff/index.html" role="button">My Own Stuff &raquo;</a></p>
         </div>
       </div>
