--- a/python/index.html
+++ b/python/index.html
@@ -6,7 +6,7 @@
     <title>Python</title>
 </head>
 <body style="background-color: aqua;">
-    <h1>Python Programs</h1>
+    <h1>Python programs</h1>
 
     <iframe height="400px" width="100%" src="https://repl.it/@stephenvick/First-Program?lite=true" 
     scrolling="no" frameborder="no"
