--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           
           <div class="col-md-2">
             <h2>Book Q and A</h2>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            <p><a class="btn btn-secondary" href="bookstuff/index.html" role="button">View details &raquo;</a></p>
           </div>
         </div>
       </div> <!-- end of first row -->
