--- a/bookstuff/index.html
+++ b/bookstuff/index.html
@@ -6,7 +6,10 @@
     <title>Reading Responses</title>
 </head>
 <body>
+
     <h1>Book Q & A </h1>
     <h2><a href="https://docs.google.com/document/d/1Ld0aVfq_630mRKc2PF6l9iswnoBSJnxcFmFs16NAc9U/edit?usp=sharing">CODE</a></h2>
+
+    <h1>Dreaming in Code</h1>
 </body>
 </html>
