--- a/bookstuff/index.html
+++ b/bookstuff/index.html
@@ -8,8 +8,10 @@
 <body>
 
     <h1>Book Q & A </h1>
+
     <h2><a href="https://docs.google.com/document/d/1Ld0aVfq_630mRKc2PF6l9iswnoBSJnxcFmFs16NAc9U/edit?usp=sharing">CODE</a></h2>
 
-    <h1>Dreaming in Code</h1>
+    <h2> <a href="https://docs.google.com/document/d/1lG5WYgh97vM1Ei8Tdh3_djK_nDoB_wfuxF6s9V2eMn8/edit?usp=sharing"> Dreaming in Code</a></h2>
+
 </body>
 </html>
