--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           
           <div class="col-md-2">
             <h2>Processing Programs</h2>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            <p><a class="btn btn-secondary" href="p5.js/index.html" role="button">View details &raquo;</a></p>
           </div>
           
           <div class="col-md-2">
