--- a/scratch/index.html
+++ b/scratch/index.html
@@ -14,7 +14,11 @@
      height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
     <h2>My Game</h2>
 
-    <h2>Traverse</h2>
+    <h2><a href="https://scratch.mit.edu/projects/437414416">Traverse</a></h2>
+
+    <iframe src="https://scratch.mit.edu/projects/437414416/embed" 
+    allowtransparency="true" width="485" height="402" frameborder="0" 
+    scrolling="no" allowfullscreen></iframe>
 </body>
 
 </html>
