--- a/p5.js/index.html
+++ b/p5.js/index.html
@@ -46,7 +46,7 @@
 
       <div class="col-md-2">
         <h2>Drawing 1</h2>
-        <p><a class="btn btn-secondary" href="scratch/index.html" role="button">View details &raquo;</a></p>
+        <p><a class="btn btn-secondary" href="sketch1/index.html" role="button">View details &raquo;</a></p>
       </div>
       
       <div class="col-md-2">
