--- a/python/index.html
+++ b/python/index.html
@@ -51,7 +51,7 @@
       
       <div class="col-md-2">
         <h2>Rock Paper Scissors</h2>
-        <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+        <p><a class="btn btn-secondary" href="rockpaperscissors/index.html" role="button">View details &raquo;</a></p>
       </div>
       
       <div class="col-md-2">
