--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
       <!-- Main header for page-->
       <div class="jumbotron" >
-        <div class="container" style="height: 130px; background-color: lightgreen;">
+        <div class="container" style="height: 130px; background-color: lightblue;">
           <h1 class="display-3" >Stephen's <span style="color: darkred;" >Portfolio </span>
         </h1>
           <p style="font-size: 18px;">This portfolio is for my CS160/161/1162/260 class work at COCC</p>
@@ -66,7 +66,7 @@
         </div>
       </div>
 
-      <div class="container">
+      <div class="container" style="background-color: lightblue;"
         <!-- first row colums -->
         <div class="row">
 
@@ -104,7 +104,7 @@
 
       <hr>
 
-      <div class="container">
+      <div class="container" style="background-color: lightgrey;">
         <!-- third row columbs -->
         <div class="row">
 
@@ -142,7 +142,7 @@
 
       <hr>
         
-      <div class="container" style="background-color: orange;">
+      <div class="container" style="background-color: lightblue;">
         <!-- third row colums -->
         <div class="row">
 
