--- a/schoolpathways/index.html
+++ b/schoolpathways/index.html
@@ -46,12 +46,12 @@
 
       <div class="col-md-2">
         <h2>Oregon State Pathway</h2>
-        <p><a class="btn btn-secondary" href="pythonpractice/index.html" role="button">View details &raquo;</a></p>
+        <p><a class="btn btn-secondary" href="oregonstate/index.html" role="button">View details &raquo;</a></p>
       </div>
       
       <div class="col-md-2">
         <h2>University of Alaska Pathway</h2>
-        <p><a class="btn btn-secondary" href="rockpaperscissors/index.html" role="button">View details &raquo;</a></p>
+        <p><a class="btn btn-secondary" href="universityofalaska/index.html" role="button">View details &raquo;</a></p>
       </div>
       
       </div>
