--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
           <div class="col-md-2" style="border-style: dotted;">
             <h2>Degree Pathways</h2>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            <p><a class="btn btn-secondary" href="schoolpathways/index.html" role="button">View details &raquo;</a></p>
           </div>
           
           <div class="col-md-2">
