--- a/schoolpathways/index.html
+++ b/schoolpathways/index.html
@@ -46,12 +46,12 @@
 
       <div class="col-md-2">
         <h2>Oregon State Pathway</h2>
-        <p><a class="btn btn-secondary" href="oregonstate/index.html" role="button">View details &raquo;</a></p>
+        <p><a class="btn btn-secondary" href="https://docs.google.com/document/d/e/2PACX-1vR_iRZyM6E8n72oj9xVvbgeXePGQNSbebOXCp3ege0cJkAI3i0nqYuzAtIlCwWLw7dF6Uo-HovSEfAZ/pub" role="button">View details &raquo;</a></p>
       </div>
       
       <div class="col-md-2">
         <h2>University of Alaska Pathway</h2>
-        <p><a class="btn btn-secondary" href="universityofalaska/index.html" role="button">View details &raquo;</a></p>
+        <p><a class="btn btn-secondary" href="https://docs.google.com/document/d/e/2PACX-1vS_G3QhOEwbNE8FdhPa7RkrfZX64zC4mVwrKoFgt73me_niK3zr-hBMQwOrqLo_dO_D0lh8k7xvEQBr/pub" role="button">View details &raquo;</a></p>
       </div>
       
       </div>
