--- a/scratch/index.html
+++ b/scratch/index.html
@@ -12,7 +12,11 @@
     <h2> <a href="https://scratch.mit.edu/projects/429601581">Friction Ball</a></h2>
     <iframe src="https://scratch.mit.edu/projects/429601581/embed" allowtransparency="true" width="485"
      height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
-    <h2>My Game</h2>
+
+    <h2> <a href="https://scratch.mit.edu/projects/441803604">My Game (Catch the Grasshopper)</a></h2>
+
+    <iframe src="https://scratch.mit.edu/projects/441803604/embed" allowtransparency="true" width="485" 
+    height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 
     <h2><a href="https://scratch.mit.edu/projects/437414416">Traverse</a></h2>
 
