--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           
           <div class="col-md-2">
             <h2>Midterm Eval</h2>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            <p><a class="btn btn-secondary" href="midtermeval/index.html" role="button">View details &raquo;</a></p>
           </div>
           
           <div class="col-md-2">
