--- a/midtermeval/index.html
+++ b/midtermeval/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1><a href="https://1drv.ms/w/s!AnRJ2s8c6nYC6zgocvEgr26wcZlR?e=GItohA" Midterm Evaluation></a></h1>
+    <h1><a href="https://1drv.ms/w/s!AnRJ2s8c6nYC6zgocvEgr26wcZlR?e=GItohA">Midterm Evaluation</a></h1>
 </body>
 </html>
