--- a/midtermeval/index.html
+++ b/midtermeval/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Midterm Evaluation</title>
 </head>
 <body>
-    <h1><a href="https://1drv.ms/w/s!AnRJ2s8c6nYC6zgocvEgr26wcZlR?e=GItohA">Midterm Evaluation</a></h1>
+    <iframe src="https://docs.google.com/document/d/e/2PACX-1vQzJJmonbNs061cjpBYXKqbiv5c7175IVamZygI1qYfn97WS5z3WqHaj5D8CDdl0-lvDF8fbUQeFfYR/pub?embedded=true"></iframe>
 </body>
 </html>
