--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           
           <div class="col-md-2">
             <h2>Code Circuits</h2>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            <p><a class="btn btn-secondary" href="codecircuits/index.html" role="button">View details &raquo;</a></p>
           </div>
           
           <div class="col-md-2">
