--- a/codecircuits/index.html
+++ b/codecircuits/index.html
@@ -43,8 +43,8 @@
     <div class="row">
 
       <div class="col-md-2">
-        <h2>Code Circuits</h2>
-        <p><a class="btn btn-secondary" href="scratch/index.html" role="button">View details &raquo;</a></p>
+        <h2>4bit adder</h2>
+        <p><a class="btn btn-secondary" href="https://youtu.be/KxgskmYzI3A " role="button">View details &raquo;</a></p>
       </div>
       
       <div class="col-md-2">
