--- a/shortreads/index.html
+++ b/shortreads/index.html
@@ -43,8 +43,8 @@
     <div class="row">
 
       <div class="col-md-2">
-        <h2>8bit adder</h2>
-        <p><a class="btn btn-secondary" href="https://youtu.be/KxgskmYzI3A " role="button">View details &raquo;</a></p>
+        <h2>Big Ball of Mud</h2>
+        <p><a class="btn btn-secondary" href="<h2><a href="https://docs.google.com/document/d/e/2PACX-1vQSjoP5IGBZ9tnfPXcfzhCl2tKorEAPgxnG_FrDQjVD5c-wko9qFyhXWVwRmfcGz7OAFowDhuYeDam9/pub"> role="button">View details &raquo;</a></p>
       </div>
       
       <div class="col-md-2">
