--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           
           <div class="col-md-2">
             <h2>Short Reads</h2>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            <p><a class="btn btn-secondary" href="shortreads/index.html" role="button">View details &raquo;</a></p>
           </div>
         </div>
       </div> <!--end of second row-->
