--- a/shortreads/index.html
+++ b/shortreads/index.html
@@ -44,7 +44,7 @@
 
       <div class="col-md-2">
         <h2>Big Ball of Mud</h2>
-        <p><a class="btn btn-secondary" href="<h2><a href="https://docs.google.com/document/d/e/2PACX-1vQSjoP5IGBZ9tnfPXcfzhCl2tKorEAPgxnG_FrDQjVD5c-wko9qFyhXWVwRmfcGz7OAFowDhuYeDam9/pub"> View details &raquo;</a></p>
+        <p><a class="btn btn-secondary" href="https://docs.google.com/document/d/e/2PACX-1vQSjoP5IGBZ9tnfPXcfzhCl2tKorEAPgxnG_FrDQjVD5c-wko9qFyhXWVwRmfcGz7OAFowDhuYeDam9/pub?embedded=true"> View details &raquo;</a></p>
       </div>
       
       <div class="col-md-2">
