--- a/shortreads/index.html
+++ b/shortreads/index.html
@@ -44,12 +44,12 @@
 
       <div class="col-md-2">
         <h2>Big Ball of Mud</h2>
-        <p><a class="btn btn-secondary" href="https://docs.google.com/document/d/e/2PACX-1vQSjoP5IGBZ9tnfPXcfzhCl2tKorEAPgxnG_FrDQjVD5c-wko9qFyhXWVwRmfcGz7OAFowDhuYeDam9/pub?embedded=true"> View details &raquo;</a></p>
+        <p><a class="btn btn-secondary" href="https://docs.google.com/document/d/e/2PACX-1vQSjoP5IGBZ9tnfPXcfzhCl2tKorEAPgxnG_FrDQjVD5c-wko9qFyhXWVwRmfcGz7OAFowDhuYeDam9/pub" role="button">View details &raquo;</a></p>
       </div>
       
       <div class="col-md-2">
-        <h2>N/A</h2>
-        <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+        <h2>Is Programing All About Coding</h2>
+        <p><a class="btn btn-secondary" href="https://docs.google.com/document/d/e/2PACX-1vS0xaX2U17_S2oNu-gGH5BpRGR1hqKRoVCxK5GKbUQOSkmjyIUY-U8ZWW7D3TVuZnoL884PmfjDz4yr/pub" role="button">View details &raquo;</a></p>
       </div>
       
       <div class="col-md-2">
