--- a/shortreads/index.html
+++ b/shortreads/index.html
@@ -32,7 +32,7 @@
   <!-- Main header for page-->
   <div class="jumbotron" >
     <div class="container" style="height: 130px; background-color: lightblue;">
-      <h1 class="display-3" >Stephen's <span style="color: darkred;" >Circuits </span>
+      <h1 class="display-3" >Stephen's <span style="color: darkred;" >shortreads </span>
       </h1>
    
     </div>
