--- a/p5.js/index.html
+++ b/p5.js/index.html
@@ -51,7 +51,7 @@
       
       <div class="col-md-2">
         <h2>Drawing 2</h2>
-        <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+        <p><a class="btn btn-secondary" href="sketch2/index.html" role="button">View details &raquo;</a></p>
       </div>
       
       <div class="col-md-2">
