--- a/p5.js/sketch2/index.html
+++ b/p5.js/sketch2/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <iframe src="https://editor.p5js.org/stephen.vick/embed/Ub_XDbjMY"></iframe>
+    <iframe src="https://editor.p5js.org/stephen.vick/embed/Ub_XDbjMY" style = "height: 400px; width: 400px;"></iframe>
 </body>
 </html>
