--- a/p5.js/index.html
+++ b/p5.js/index.html
@@ -56,7 +56,7 @@
       
       <div class="col-md-2">
         <h2>Drawing 3</h2>
-        <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+        <p><a class="btn btn-secondary" href="sketch3/index.html" role="button">View details &raquo;</a></p>
       </div>
       
       </div>
