--- a/p5.js/index.html
+++ b/p5.js/index.html
@@ -58,6 +58,11 @@
         <h2>Drawing 3</h2>
         <p><a class="btn btn-secondary" href="sketch3/index.html" role="button">View details &raquo;</a></p>
       </div>
+
+      <div class="col-md-2">
+        <h2>Drawing 4</h2>
+        <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+      </div>
       
       </div>
     </div>
