--- a/p5.js/sketch4/index.html
+++ b/p5.js/sketch4/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <iframe src="https://editor.p5js.org/stephen.vick/embed/fHdU031r-" style = "height: 500; width: 500;"></iframe>
+    <iframe src="https://editor.p5js.org/stephen.vick/embed/fHdU031r-" style = "height: 500px; width: 500px;"></iframe>
 </body>
 </html>
