--- a/scratch/index.html
+++ b/scratch/index.html
@@ -33,6 +33,14 @@
   
 <main role="main">
 
+
+  <!-- Main header for page-->
+  <div class="jumbotron" >
+    <div class="container" style="height: 130px; background-color: lightgreen;">
+      <h1 class="display-3" >Stephen's <span style="color: darkred;" >School Pathways</span>
+    
+  </div>
+
 <body>
     <h1>Scratch Programs</h1>
 
