--- a/python/rockpaperscissors/index.html
+++ b/python/rockpaperscissors/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>Rock Paper Scissors</h1>
-    <iframe height="600px" width="100%" src="https://repl.it/@stephenvick/rock-paper-scisors?lite=true" 
+    <iframe height="800px" width="100%" src="https://repl.it/@stephenvick/rock-paper-scisors?lite=true" 
     scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" 
-    sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
+    sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals" style = "height: 800px; width: 700px;"></iframe>
 </body>
 </html>
