--- a/scratch/index.html
+++ b/scratch/index.html
@@ -37,12 +37,12 @@
   <!-- Main header for page-->
   <div class="jumbotron" >
     <div class="container" style="height: 130px; background-color: lightgreen;">
-      <h1 class="display-3" >Stephen's <span style="color: darkred;" >School Pathways</span>
+      <h1 class="display-3" >Stephen's <span style="color: darkred;" >Scratch Programs</span>
     
   </div>
 
 <body>
-    <h1>Scratch Programs</h1>
+    <h1>My Programs</h1>
 
     <h2> <a href="https://scratch.mit.edu/projects/429601581">Friction Ball</a></h2>
     <iframe src="https://scratch.mit.edu/projects/429601581/embed" allowtransparency="true" width="485"
