--- a/python/pythonpractice/index.html
+++ b/python/pythonpractice/index.html
@@ -11,6 +11,6 @@
     <iframe height="400px" width="100%" src="https://repl.it/@stephenvick/First-Program?lite=true" 
     scrolling="no" frameborder="no"
     allowtransparency="true" allowfullscreen="true" 
-    sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
+    sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals" style = "height: 800px; width: 700px;"></iframe>
 </body>
 </html>
