--- a/bookstuff/index.html
+++ b/bookstuff/index.html
@@ -40,7 +40,7 @@
   <!-- Main header for page-->
   <div class="jumbotron" >
     <div class="container" style="height: 130px; background-color: lightgreen;">
-      <h1 class="display-3" >Stephen's <span style="color: darkred;" >School Pathways</span>
+      <h1 class="display-3" >Book <span style="color: darkred;" >Q and A</span>
     
   </div>
 
