--- a/greenfoot/index.html
+++ b/greenfoot/index.html
@@ -39,10 +39,10 @@
   </div>
 
 <h1>moving</h1>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/AHCIxsM8GF8" style = "height: 400px; width: 400px;" frameborder="0" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/AHCIxsM8GF8" frameborder="20px" allowfullscreen></iframe>
     <h1>eating worms</h1>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/UEKMQOOSQts" style = "height: 400px; width: 400px;" frameborder="0" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/UEKMQOOSQts"  frameborder="20px" allowfullscreen></iframe>
         <h1>Noisy Crab</h1>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/KCR4xTINpkw" style = "height: 400px; width: 400px;" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/KCR4xTINpkw" frameborder="20" allowfullscreen></iframe>
         <h1>Mean lobsters</h1>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/k1rDKNKdH_c" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/k1rDKNKdH_c" frameborder="20" allowfullscreen></iframe>
