--- a/greenfoot/index.html
+++ b/greenfoot/index.html
@@ -38,14 +38,14 @@
     </div>
   </div>
 
-<div> class = "container"
-    <div> class = "row"
+<div class = "container">
+    <div class = "row">
         <h1>moving</h1>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/AHCIxsM8GF8" frameborder="20px" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/AHCIxsM8GF8" frameborder="20" allowfullscreen></iframe>
         <h1>eating worms</h1>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/UEKMQOOSQts"  frameborder="20px" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/UEKMQOOSQts"  frameborder="20" allowfullscreen></iframe>
     </div>
-    <div> class = "row"
+    <div class = "row">
         <h1>Noisy Crab</h1>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/KCR4xTINpkw" frameborder="20" allowfullscreen></iframe>
         <h1>Mean lobsters</h1>
