--- a/greenfoot/index.html
+++ b/greenfoot/index.html
@@ -40,10 +40,14 @@
 
 <div class = "container">
     <div class = "row">
+        <div>
         <h1>moving</h1>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/AHCIxsM8GF8" frameborder="20" allowfullscreen></iframe>
+        </div>
+        <div>
         <h1>eating worms</h1>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/UEKMQOOSQts"  frameborder="20" allowfullscreen></iframe>
+        </div>
     </div>
     <div class = "row">
         <h1>Noisy Crab</h1>
