--- a/python/index.html
+++ b/python/index.html
@@ -55,8 +55,8 @@
       </div>
       
       <div class="col-md-2">
-        <h2>other</h2>
-        <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+        <h2>Mastermind</h2>
+        <p><a class="btn btn-secondary" href="mastermind/index.html" role="button">View details &raquo;</a></p>
       </div>
       
       </div>
