--- a/python/mastermind/index.html
+++ b/python/mastermind/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <iframe height="400px" width="100%" src="https://repl.it/@stephenvick/mastermind?lite=true" scrolling="no" 
+    <h1>Mastermind</h1>
+    <iframe height="800px" width="700px" src="https://repl.it/@stephenvick/mastermind?lite=true" scrolling="no" 
     frameborder="no" allowtransparency="true" allowfullscreen="true" 
     sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals" style = "height: 808; width: 700;"></iframe>
 </body>
