--- a/codecircuits/index.html
+++ b/codecircuits/index.html
@@ -44,11 +44,12 @@
 
       <div class="col-md-2">
         <h2>8bit adder</h2>
-        <p><a class="btn btn-secondary" href="https://youtu.be/KxgskmYzI3A " role="button">View details &raquo;</a></p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/KxgskmYzI3A" frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       
       <div class="col-md-2">
-        <h2>N/A</h2>
+        <h2></h2>
         <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
       </div>
       
