--- a/greenfoot/index.html
+++ b/greenfoot/index.html
@@ -36,17 +36,18 @@
       </h1>
    
     </div>
-  </div>
-  <img src = "wambat_tutorial.png">
+  </div>  
+
 <div class = "container">
     <div class = "row">
+        <div><img src = "../Snip/wambat.PNG" style = "width: 350px; height: 350px;"></div>
         <div>
         <h1>Moving</h1>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/AHCIxsM8GF8" frameborder="20" allowfullscreen></iframe>
+        <iframe width="380" height="270" src="https://www.youtube.com/embed/AHCIxsM8GF8" frameborder="20" allowfullscreen></iframe>
         </div>
         <div>
         <h1>Eating worms</h1>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/UEKMQOOSQts"  frameborder="20" allowfullscreen></iframe>
+        <iframe width="380" height="270" src="https://www.youtube.com/embed/UEKMQOOSQts"  frameborder="20" allowfullscreen></iframe>
         </div>
     </div>
     <div class = "row">
