--- a/mystuff/index.html
+++ b/mystuff/index.html
@@ -9,6 +9,7 @@
     <h1>Stephen's Personal</h1>
     <a href="http://w3schools.com">W3schools</a>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRvCllii7yBuZSeoVpbbwuJOP_FOshffn8HxA&usqp=CAU" alt="stuff">
-    <img src = "images/wambat.PNG">
+    <img src = "/stephenvick.github.io/Snip/latch.PNG" alt>
+    <img src = "../../stephenvick.github.io/images/Snip/">
 </body>
 </html>
