--- a/shortreads/index.html
+++ b/shortreads/index.html
@@ -53,8 +53,8 @@
       </div>
       
       <div class="col-md-2">
-        <h2>N/A</h2>
-        <p><a class="btn btn-secondary" href="python/index.html" role="button">View details &raquo;</a></p>
+        <h2>DevOps</h2>
+        <p><a class="btn btn-secondary" href="https://docs.google.com/document/d/e/2PACX-1vSFfwE8V3xvb8AHsXyZVwbDervIFktL-BFhnEp49ty8Wh68EfER2kVu6LL8MZpK4Y7FLmAZOiPFWwJ_/pub" role="button">View details &raquo;</a></p>
       </div>
       
       <div class="col-md-2">
