--- a/codecombat/index.html
+++ b/codecombat/index.html
@@ -32,7 +32,7 @@
   <!-- Main header for page-->
   <div class="jumbotron" >
     <div class="container" style="height: 130px; background-color: lightblue;">
-      <h1 class="display-3" >Code <span style="color: darkred;" >Circuits </span>
+      <h1 class="display-3" >Code <span style="color: darkred;" >Combat </span>
       </h1>
    
     </div>
@@ -46,11 +46,10 @@
 
       <div class = "container">
         <div class = "row">
-            <div><h1>Half Adder</h1>
-            <img src = "../Snip/code_combat1.PNG" style = "width: 350px; height: 350px;"></div>
-            <div><h1>Full Adder</h1>
-            <img src = "../Snip/code_combat2.PNG" style = "width: 350px; height: 350px;"></div>
-            <div><h1>4bit Adder</h1> 
-            <img src = "../Snip/4bit adder.PNG" style = "width: 400px; height: 350px;"></div>
+            <div><h1>Progress</h1>
+            <img src = "../Snip/code_combat1.PNG" style = "width: 500px; height: 500px;"></div>
+            <div><h1>Map</h1>
+            <img src = "../Snip/code_combat2.PNG" style = "width: 500px; height: 500px;"></div>
+            
            
         </div>
