--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           
           <div class="col-md-2">
             <h2>Tresure Hunt</h2>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            <p><a class="btn btn-secondary" href="robot/index.html" role="button">View details &raquo;</a></p>
           </div>
           
           <div class="col-md-2">
