--- a/appinventor/index.html
+++ b/appinventor/index.html
@@ -32,11 +32,11 @@
   <!-- Main header for page-->
   <div class="jumbotron" >
     <div class="container" style="height: 130px; background-color: lightblue;">
-      <h1 class="display-3" >Final <span style="color: darkred;" >Exam </span>
+      <h1 class="display-3" >App <span style="color: darkred;" >Inventor </span>
       </h1>
    
     </div>
   </div>
 
 
-  <h1>Incomplete</h1>
+  <h1>Incomplete: on my old computer somewhere</h1>
