--- a/finalexam/index.html
+++ b/finalexam/index.html
@@ -38,5 +38,4 @@
     </div>
   </div>
 
-
-  <h1>Incomplete</h1>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vTHXasBh7RAOnu3N_pAx9Ro7Y5KpBfuQt2cgqGVoy0UTCzpLQbVnfLD1N6TtB4tihjL-Y1RsE--i6aZ/pub?embedded=true"></iframe>
