--- a/finalexam/index.html
+++ b/finalexam/index.html
@@ -38,4 +38,4 @@
     </div>
   </div>
 
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vTHXasBh7RAOnu3N_pAx9Ro7Y5KpBfuQt2cgqGVoy0UTCzpLQbVnfLD1N6TtB4tihjL-Y1RsE--i6aZ/pub?embedded=true"></iframe>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vTHXasBh7RAOnu3N_pAx9Ro7Y5KpBfuQt2cgqGVoy0UTCzpLQbVnfLD1N6TtB4tihjL-Y1RsE--i6aZ/pub?embedded=true" style = "height: 800px; width: 700px;"></iframe>
