--- a/finalexam/index.html
+++ b/finalexam/index.html
@@ -39,4 +39,4 @@
   </div>
 
   <iframe src="https://docs.google.com/document/d/e/2PACX-1vTHXasBh7RAOnu3N_pAx9Ro7Y5KpBfuQt2cgqGVoy0UTCzpLQbVnfLD1N6TtB4tihjL-Y1RsE--i6aZ/pub?embedded=true" style = "height: 800px; width: 700px;"></iframe>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vSvV42EjHu9wPxmiXU-am8j79jn4WrDud9CuWse_eXlfs6MgGszNdFZLY_vo5FpK_7b8xL5lijecWEM/pub?embedded=true" style = "height 800px; width: 700px;"></iframe>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vSvV42EjHu9wPxmiXU-am8j79jn4WrDud9CuWse_eXlfs6MgGszNdFZLY_vo5FpK_7b8xL5lijecWEM/pub?embedded=true" style = "height: 800px; width: 700px;"></iframe>
